2006-04-25  Derek Scherger  <derek@echologic.com>

	* cmd_*.cc: merge new restrictions changes in from commands.cc
	split
	* tests/t_log_dir.at: remove stale comment 
	* work.{cc,hh}(find_missing, find_unknown_and_ignored): move 
	these functions here from commands.cc split
	
2006-04-24  Derek Scherger  <derek@echologic.com>

	* contrib/monotone.el (monotone-commit-complete): call line
	removal function by it's actual name

2006-04-24  Derek Scherger  <derek@echologic.com>

	* cmd_diff_log.cc (log): remove --recursive option from log;
	directories are always recursive as with other restricted commands
	* tests/t_log_dir.at: account for recursive directories

2006-04-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (attr): Use get_base_and_current_roster_shape
	instead of doing a pointless workspace scan.

2006-04-23  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Clear a fuzzy.

2006-04-23  Richard Levitte  <richard@levitte.org> &  Alex Queiroz <alex@ventonegro.org>

	* lua.cc (monotone_includedir_for_lua): Tweak a spelling mistake.
	Notified by Jeronimo Pellegrini <pellegrini@mpcnet.com.br>.

2006-04-23 Alex Queiroz <alex@ventonegro.org>

	* pt_BR.po: Fixed some fuzzy translations.

2006-04-21  Richard Levitte  <richard@levitte.org>

	* contrib/usher.cc (fork_server): Make sure to append to already
	existing log file.

2006-04-21  Richard Levitte  <richard@levitte.org>

	* contrib/usher.cc (fork_server): Redirect the logs of the sub-
	servers to log files instead of a pipe, and have the main
	process read that file instead of the pipe.
	(read_server_record): Complain about unrecognised commands, and
	continue processing.
	(reload_conffile): Parse the logdir command.  Complain about
	unrecognised commands, and continue processing.

2006-04-21 Alex Queiroz <alex@ventonegro.org>

	* Make clear in the "automate get_revision" documentation that
	path stanzas are grouped under the corresponding "old_revision" one.
